Added some unit tests. Replaced call to deprecated method Class#getInstance.